# LPSC_sites

./: .gitignore  .gitignore.  README.md  extract_sites.ipynb  geometry.py  pyproject.toml  symmetry.py  test_lpsc_sites.py
data/: LPSC_all.cif  README.md
lpsc_sites/: __init__.py  density.py  pipeline.py  records.py
notebooks/: extract_sites.ipynb
