[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "lpsc-sites"
version         = "0.1.0"
description     = "Anchor-based Li site extraction from AIMD density volumes for cubic argyrodite Li6PS5Cl (F-43m)."
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [{ name = "Francesco Modica", email = "TODO@example.com" }]
keywords        = [
    "argyrodite", "solid-state electrolyte", "AIMD",
    "lithium", "Wyckoff", "site extraction", "LPSC",
]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies    = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pymatgen>=2023.0",
    "gemdat>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter",
    "notebook",
]

[project.urls]
Repository = "https://github.com/TODO/lpsc-sites"

[tool.setuptools.packages.find]
include = ["lpsc_sites*"]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
testpaths      = ["tests"]
python_files   = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
